# api-prototype

./: .env  .env-template  .gitignore  Cargo.toml  Dockerfile  Readme.md  development  development.sh  docker-compose.yml  traefik.yml
.github/workflows/: docker-image.yml  production.yml
api/: .env-template  Cargo.toml  Dockerfile  DockerfileFast
api/db/: init.sql
api/db/company/: 1684056643_company.up.sql  1684058014_company.down.sql  1684058014_company.up.sql
api/db/detactive/: 1684058014_detactive.up.sql  1684058015_detactive.down.sql  1684058015_detactive.up.sql  1684058016_detactive.up.sql  20230423124050_detactive.up.sql  20230423124050_inital_schema.down.sql
api/db/sticker/: 20230429105544_sticker.up.sql
api/db/tests/: detactive.test.sql  lukas_story.test.sql
api/migrations/: 20230423124050_initial_schema.down.sql  20230423124050_initial_schema.up.sql
api/src/: main.rs
api/src/routes/: mod.rs
api/src/routes/game/: delete.rs  forward.rs  forward_old.rs  list.rs  mod.rs  start.rs
api/src/routes/games/: delete.rs  forward.rs  mod.rs  start.rs  steps.rs
api/src/routes/sticker/: follow_us_on_instagram.rs  mod.rs  var_id.rs
api/src/routes/stories/: forward.rs  list.rs  mod.rs  start.rs
api/src/routes/story/: forward.rs  list.rs  mod.rs  quit.rs  start.rs
api/src/routes/storystudio/: access.rs  list.rs  load.rs  mod.rs  step.rs  story.rs  waypoint.rs
api/src/routes/storystudio/step/: load.rs  mod.rs  remove.rs  save.rs
api/src/routes/storystudio/story/: load.rs  mod.rs  remove.rs  save.rs
api/src/routes/user/: mod.rs  new.rs
api/src/routes/users/: mod.rs  register.rs  token.rs
api/src/types/: context.rs  coord.rs  decision.rs  derror.rs  dtypes.rs  location.rs  media.rs  mediatype.rs  medium.rs  mod.rs  step.rs  story.rs  studiotypes.rs  user.rs  waypoint.rs
api/src/utils/: contentful.rs  cors.rs  db.rs  geo.rs  mod.rs
api/src/utils/geo/: bbox.rs  latlon.rs  mod.rs  near.rs  old_near.rs  tags.rs  tags_old.rs
api/src/utils/http/: cors.rs  guard.rs  jwt.rs  mod.rs
api_server/: Cargo.toml  Dockerfile
api_server/src/: main.rs
api_server/src/routes/: blueprint.rs  missions.rs  mod.rs  stories.rs  user.rs
api_server/src/types/: blueprint.rs  coord.rs  location.rs  mission.rs  mod.rs  story.rs  user.rs
api_server/src/types/blueprint/: edge.rs  metadata.rs  mod.rs  node.rs  position.rs
api_server/src/utils/: db.rs  geo.rs
db/detactive/: 1684058016_detactive.down.sql  1684058016_detactive.up.sql
db/stories/: bombenanschlag.sql  bombenfund.sql  bombenfund_v2.sql  juwelenraub.sql  juwelenraub_v1.sql  juwelenraub_v2.sql
db/tests/: detactive.test.sql
docker/: docker-compose.development.yml  docker-compose.production.yml
docs/: README.md
docs/api/: README.md
env/: .env  .env-template  docker-compose.development.yml  docker-compose.production.yml
gateway/: init.sh  nginx.conf
gateway/nginx/: init.sh  nginx.conf
gateway/nginx/templates/: default.conf.template
nginx/: nginx.conf
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/commands/: missions.rs  user.rs
server/src/routes/: map.rs  missions.rs  mod.rs  user.rs
server/src/types/: coord.rs  mission.rs  user.rs
server/src/utils/: db.rs  geo.rs  mod.rs
src/: main.rs
src/core/: mod.rs  server.rs  session.rs  user.rs
src/routes/: mod.rs
src/routes/games/: delete.rs  start.rs  steps.rs
src/routes/sticker/: mod.rs  var_id.rs
src/routes/stories/: mod.rs
src/routes/storystudio/step/: load.rs
src/routes/storystudio/story/: load.rs  save.rs
src/routes/users/: mod.rs  token.rs
src/types/: context.rs  derror.rs  dtypes.rs  endingtype.rs  mediatype.rs  mod.rs  usersettings.rs
src/utils/: db.rs  mod.rs
src/utils/geo/: latlon.rs  mod.rs  near.rs  settings.rs  tags.rs
src/utils/http/: guard.rs
test/: story-run.ipynb  story.py
