[package]
name = "detactive-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.2", features= ["serde"] }
tokio =  { version = "1.23.0", features = ["full"] }
reqwest = { version = "0.11.14", features= ["json"] }
tower-http = { version = "0.4.0", features= ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
axum = { version = "0.6.1", features = ["macros", "headers"] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "postgres", "macros", "json", "chrono", "uuid" ] }

log = "0.4"
rand = "0.8.5"
chrono = "0.4.24"
sentry = "0.32.0"
dropshot = "0.9.0"
fastrand = "2.0.1"
env_logger = "0.10.0"
serde_json = "1.0.91"
jsonwebtoken = "8.3.0"
tokio-rustls = "0.24.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
