[package]
name = "detactive-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio =  { version = "1.23.0", features = ["full"] }
reqwest = { version = "0.11.14", features= ["json"] }
tower-http = { version = "0.4.0", features= ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres", "macros", "json", "chrono" ] }

axum = "0.6.1"
rand = "0.8.5"
chrono = "0.4.24"
serde_json = "1.0.91"
jsonwebtoken = "8.3.0"