[package]
name = "detactive-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.2", features= ["serde"] }
tokio =  { version = "1.23.0", features = ["full"] }
reqwest = { version = "0.11.14", features= ["json"] }
tower-http = { version = "0.4.0", features= ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "postgres", "macros", "json", "chrono", "uuid" ] }
axum-server = { version = "0.4.7", features = ["tls-rustls"] }
rustls-acme = { version = "0.6.0", features = ["axum"] }

hyper = "0.14.26"
rustls = "0.21.1"
tower = "0.4.13"
axum = "0.6.1"
rand = "0.8.5"
chrono = "0.4.24"
serde_json = "1.0.91"
jsonwebtoken = "8.3.0"
tokio-rustls = "0.24.0"
